<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:background="#333">
    <ScrollView
        android:layout_width="300dp"
        android:layout_height="400dp"
        >
        <RelativeLayout
            android:id="@+id/help_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            >
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="150dp"
                android:text="@string/help_welcome"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#eee"
                />

            <View
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="125dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="300dp"
                android:background="@drawable/up"
                android:backgroundTint="#777"
                />
            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="350dp"
                android:text="@string/help_swipe"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#777"
                />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="550dp"
                android:text="@string/help_intro"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#eee"
                />

            <View
                android:layout_width="250dp"
                android:layout_height="400dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="700dp"
                android:background="@drawable/help1"
                />
            <View
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="1150dp"
                android:background="@drawable/help2"
                />
            <View
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="1550dp"
                android:background="@drawable/help3"
            />

            <!--RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1225dp"
                android:layout_marginStart="1225dp"
                android:layout_marginTop="300dp"
                android:text="@string/nevershow"
                android:textColor="#999"
                /-->

            <Button
                android:id="@+id/help_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1750dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/close"
                android:textColor="@color/colorAccent"
                android:background="#333"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>