<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="220dp"
    android:background="#333">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_rot"
        android:textColor="#eee"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <Switch
        android:id="@+id/do_ed_useSp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:trackTint="#fff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isSpeed"
        android:textColor="#eee"
        android:textSize="15sp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"/>

    <Switch
        android:id="@+id/do_ed_invert"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:trackTint="#fff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invert"
        android:textColor="#eee"
        android:textSize="15sp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"/>


    <TextView
        android:id="@+id/do_ed_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="回転速さ"
        android:textColor="#eee"
        android:textSize="18sp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/do_ed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:textColor="#eee"
        android:textSize="15sp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>
    <SeekBar
        android:id="@+id/do_ed_slider"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:progress="0"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"/>

    <ImageView
        android:id="@+id/do_ed_robot"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/robot"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:rotation="0"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/robot_frame"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
    android:id="@+id/do_ed_optionbutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="180dp"
    android:text="@string/options2"
    android:textColor="@color/colorAccent"
    android:background="#333"/>

    <Button
        android:id="@+id/do_ed_okbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="180dp"
        android:text="適用"
        android:textColor="@color/colorAccent"
        android:background="#333"/>

</RelativeLayout>