<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:theme="@style/AppTheme">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            tools:context="com.pk.souzou1.MainActivity">

            <View
                android:id="@+id/cursor"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="#ff000000"
                android:background="@drawable/alpha"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="60dp"
                android:id="@+id/scrollView">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/body_view">
                    <!--Button
                        android:text="始め>>"
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="0dp"
                        android:backgroundTint="@color/start"
                        android:id="@+id/button_start" /-->
                    <TextView
                        android:text="始め>>"
                        android:textColor="#333"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:paddingTop="10dp"/>

                </LinearLayout>
            </ScrollView>

            <ImageButton
                android:src="@drawable/up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_above="@+id/button_down"
                android:backgroundTint="@color/colorAccent"
                android:onClick="NavUp"
                android:id="@+id/button_up" />

            <ImageButton
                android:src="@drawable/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_above="@+id/button_add"
                android:backgroundTint="@color/colorAccent"
                android:onClick="NavDown"
                android:id="@+id/button_down" />

            <Button
                android:text="@string/add"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:onClick="Add"
                android:backgroundTint="@color/colorAccent"
                android:id="@+id/button_add" />

        </RelativeLayout>


        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#3923FF"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/toolbar_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="false"
                android:focusable="false"
                android:background="@drawable/options"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:text="@string/editor_name"
                android:textSize="10pt"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="50dp"
                android:paddingEnd="50dp"
                android:textColor="#eee"
                />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/arduino_status_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/arduino_none"
                />
        </android.support.v7.widget.Toolbar>
    </FrameLayout>

    <ImageView
        android:id="@+id/face"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/face_black1"
        android:visibility="invisible"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/debug"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:gravity="end"
        android:textColor="#f00"/>

    <RelativeLayout
        android:id="@+id/left_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="#333"
        android:layout_gravity="start">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:textColor="#666"
            android:gravity="end"
            android:text="@string/version"/>
        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/gear"/>
        <View
            android:id="@+id/drawer_gear"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#0000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/options"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingRight="12dp"
            android:paddingEnd="12dp"
            android:textSize="18sp"
            android:textColor="#eee"
            android:layout_marginTop="60dp"/>
        <ListView
            android:id="@+id/left_drawer_list"
            android:layout_width="match_parent"
            android:listSelector="#00000000"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="100dp"
            android:background="#333"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:textColor="#BBB"
            android:background="#0000"
            android:layout_marginBottom="10dp"
            android:text="@string/debug"
            android:onClick="ShowDebug"/>
        <View
            android:id="@+id/drawer_item_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/lightningw"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/right_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="#eee"
        android:layout_gravity="end">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textColor="#333"
            android:text="@string/settings_empty"/>
        <Switch
            android:id="@+id/wfaceSwitch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:textColor="#333"
            android:text="@string/white_screen"/>

        <Switch
            android:id="@+id/hatenaSwitch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/hatenaFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:textColor="#333"
            android:text="@string/hatena"/>

        <!--debugger console-->
        <TextView
            android:id="@+id/debug_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="#eee"
            android:background="#333"
            android:paddingTop="60dp"/>
        <TextView
            android:id="@+id/debug_info"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="#eee"
            android:text="@string/setdebugstring"/>
        <EditText
            android:id="@+id/debug_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:layout_marginTop="20dp"
            android:textColor="#eee"
            android:imeOptions="actionSend"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/debug_clear"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/debug_clear"
            android:layout_toStartOf="@+id/debug_clear"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/debug_send"/>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
