<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="#333">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_wait"
        android:textColor="#eee"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <RadioGroup
        android:id="@+id/wt_ed_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/wt_ed_t01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="x0.1"
            android:textColor="#eee"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/wt_ed_t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="x1"
            android:textColor="#eee"/>
        <RadioButton
            android:id="@+id/wt_ed_t10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="x10"
            android:textColor="#eee"/>
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time2wait"
        android:textColor="#eee"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/wt_ed_value"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:gravity="end"
        android:textColor="#eee"
        android:textSize="15sp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>
    <SeekBar
        android:id="@+id/wt_ed_slider"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:progress="0"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"/>

    <Button
        android:id="@+id/wt_ed_optionbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/options2"
        android:textColor="@color/colorAccent"
        android:background="#333"/>

    <Button
        android:id="@+id/wt_ed_okbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        android:text="適用"
        android:textColor="@color/colorAccent"
        android:background="#333"/>

</RelativeLayout>